--- a/index.html
+++ b/index.html
@@ -19,77 +19,12 @@
             <h3 id="timer">50S</h3>
         </div>
     <button id="reset">RESET</button>
-    <div class="begginer-board" id="board">
-        <div class="box" id="0-0"></div>
-        <div class="box" id="0-1"></div>
-        <div class="box" id="0-2"></div>
-        <div class="box" id="0-3"></div>
-        <div class="box" id="0-4"></div>
-        <div class="box" id="0-5"></div>
-        <div class="box" id="0-6"></div>
-        <div class="box" id="0-7"></div>
-        <div class="box" id="1-0"></div>
-        <div class="box" id="1-1"></div>
-        <div class="box" id="1-2"></div>
-        <div class="box" id="1-3"></div>
-        <div class="box" id="1-4"></div>
-        <div class="box" id="1-5"></div>
-        <div class="box" id="1-6"></div>
-        <div class="box" id="1-7"></div>
-        <div class="box" id="2-0"></div>
-        <div class="box" id="2-1"></div>
-        <div class="box" id="2-2"></div>
-        <div class="box" id="2-3"></div>
-        <div class="box" id="2-4"></div>
-        <div class="box" id="2-5"></div>
-        <div class="box" id="2-6"></div>
-        <div class="box" id="2-7"></div>
-        <div class="box" id="3-0"></div>
-        <div class="box" id="3-1"></div>
-        <div class="box" id="3-2"></div>
-        <div class="box" id="3-3"></div>
-        <div class="box" id="3-4"></div>
-        <div class="box" id="3-5"></div>
-        <div class="box" id="3-6"></div>
-        <div class="box" id="3-7"></div>
-        <div class="box" id="4-0"></div>
-        <div class="box" id="4-1"></div>
-        <div class="box" id="4-2"></div>
-        <div class="box" id="4-3"></div>
-        <div class="box" id="4-4"></div>
-        <div class="box" id="4-5"></div>
-        <div class="box" id="4-6"></div>
-        <div class="box" id="4-7"></div>
-        <div class="box" id="5-0"></div>
-        <div class="box" id="5-1"></div>
-        <div class="box" id="5-2"></div>
-        <div class="box" id="5-3"></div>
-        <div class="box" id="5-4"></div>
-        <div class="box" id="5-5"></div>
-        <div class="box" id="5-6"></div>
-        <div class="box" id="5-7"></div>
-        <div class="box" id="6-0"></div>
-        <div class="box" id="6-1"></div>
-        <div class="box" id="6-2"></div>
-        <div class="box" id="6-3"></div>
-        <div class="box" id="6-4"></div>
-        <div class="box" id="6-5"></div>
-        <div class="box" id="6-6"></div>
-        <div class="box" id="6-7"></div>
-        <div class="box" id="7-0"></div>
-        <div class="box" id="7-1"></div>
-        <div class="box" id="7-2"></div>
-        <div class="box" id="7-3"></div>
-        <div class="box" id="7-4"></div>
-        <div class="box" id="7-5"></div>
-        <div class="box" id="7-6"></div>
-        <div class="box" id="7-7"></div>
-    </div>
+    <div id="board"></div>
 </main>
     <div class="levels">
-        <button id="begginer">BEGGINER</button>
+        <button id="beginner">BEGGINER</button>
         <button id="intermediate">INTERMEDIATE</button>
-        <button id="advanced">ADVANCE</button>
+        <button id="advance">ADVANCE</button>
     </div>
 </div>
 </body>
