final push with basic functions working (timer, flags, levels)

--- a/index.html
+++ b/index.html
@@ -12,20 +12,27 @@
 <body>
     <div id="container">
     <h1>Minesweeper</h1>
-    <h2 id="message">message</h2>
+    <h2 id="message">Choose Your Level</h2>
     <main>
         <div id="score-board">
-            <h3 id="mines-left">10</h3>
-            <h3 id="timer">50S</h3>
+            <div id="flags-board">
+                <h3 id="flagsCounter">🚩</h3>
+                <h3 id="mines-left">00</h3>
+            </div>
+            <div id="timer-board">
+                <h3 id="timerText">timer</h3>
+                <h3 id="timer">00</h3>
+            </div>
         </div>
-    <button id="reset">RESET</button>
-    <div id="board"></div>
-</main>
+        <button id="reset">RESET</button>
+        <div id="board"></div>
+    </main>
     <div class="levels">
-        <button id="beginner">BEGGINER</button>
-        <button id="intermediate">INTERMEDIATE</button>
-        <button id="advance">ADVANCE</button>
+    <button id="beginner">BEGGINER</button>
+    <button id="intermediate">INTERMEDIATE</button>
+    <button id="advance">ADVANCE</button>
     </div>
-</div>
+    </div>
 </body>
+
 </html>
