--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="container">
-    <h1>Minesweeper</h1>
+    <h1>💥Minesweeper💥</h1>
     <h2 id="message">Choose Your Level</h2>
     <main>
         <div id="score-board">
