fix typo on level button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div id="board"></div>
         </main>
         <div class="levels">
-            <button id="beginner">BEGGINER</button>
+            <button id="beginner">BEGINNER</button>
             <button id="intermediate">INTERMEDIATE</button>
             <button id="advance">ADVANCE</button>
         </div>
